manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apisix
spec:
  replicas: 1
  selector:
    matchLabels:
      app: apisix
  template:
    metadata:
      labels:
        app: apisix
    spec:
      containers:
      - name: apisix
        image: apache/apisix:2.14.0-alpine
        ports:
        - containerPort: 9080
