manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: apisix
spec:
  selector:
    app: apisix
  ports:
  - port: 80
    targetPort: 9080
